[project]
name = "abdnw"
version = "0.1.0"
description = ""
authors = [
    {name = "Nik Williams",email = "nikwilliams@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyomo (>=6.9.4,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "highspy (>=1.11.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "abdnw", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
